overflow fix

--- a/assets/scss/partials/_index.scss
+++ b/assets/scss/partials/_index.scss
@@ -8,7 +8,8 @@
   @include rem(height, 57px);
 
   .container {
-    overflow: auto;
+    overflow: hidden;
+    overflow-x: auto;
   }
 }
 
